# platform.core.appfw.status

./: CMakeLists.txt  project.config  status-monitor.pc.in  status.pc.in
debian/: changelog  control  libstatus-dev.install.in  libstatus.postinst.in  rules
include/: status-internal.h  status-monitor.h  status-type.h  status.h  status_log.h
packaging/: status.changes  status.spec
src/: status-monitor.c  status.c
test/: Makefile  monitor_test.c  post_test.c
